--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "react_random_quote",
-    "homepage": "https://github.com/HMarinos/random_quote",
+    "homepage": "https://HMarinos.github.io/random_quote",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
